--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 /*Body styles*/
 body{
-    min-height: 100vh;
+    min-height: 100vh; /*Ensure the body takes up the full height of the viewport */
     background-color: #b1bfd8;
     background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%);
 
