--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 /*Body styles*/
 body{
     min-height: 100vh; /*Ensure the body takes up the full height of the viewport */
-    background-color: #b1bfd8;
+    background-color: #b1bfd8;  /* Light blue background color */
     background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%);
 
     display: flex;
