--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 body{
     min-height: 100vh; /*Ensure the body takes up the full height of the viewport */
     background-color: #b1bfd8;  /* Light blue background color */
-    background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%);
+    background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%); /* Gradient background for a smooth transition between two shades of blue */
 
     display: flex;
     justify-content: center;
