--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
     background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%); /* Gradient background for a smooth transition between two shades of blue */
 
     display: flex;
-    justify-content: center;
+    justify-content: center;  /* Center content horizontally */
     align-items: center;
 
     font-family: "Poppins", sans-serif;
