--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body{
     padding: 0.5rem;
     background-color: #ffffff; /*White background*/
     border-radius: 8px;  /* Rounded corners */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Light shadow for a 3D effect */
 }
 
 .score {
