--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body{
 .title{
     background: white; /* White background for the title */
     margin: 2rem 0;/* Margin to add space around the title */
-    padding: .5rem 0;
+    padding: .5rem 0;/* Padding inside the title */
 
     text-align: center;
     letter-spacing: 2px;
