--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body{
     margin: 2rem 0;/* Margin to add space around the title */
     padding: .5rem 0;/* Padding inside the title */
 
-    text-align: center;
+    text-align: center; /* Center-align the title */
     letter-spacing: 2px;
     font-size: 1.5rem;
 }
