--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body{
     padding: .5rem 0;/* Padding inside the title */
 
     text-align: center; /* Center-align the title */
-    letter-spacing: 2px;
+    letter-spacing: 2px; /* Space out the letters */
     font-size: 1.5rem;
 }
 
