--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ body{
     align-items: center; /* Center the game elements vertically */
     gap: 2rem; /* Add space between the game elements */
 
-    border: 5px solid white;
+    border: 5px solid white;/* White border for the game area */
     padding: 3rem 2rem;
     text-align: center;
 
