--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ h1{
     letter-spacing: 2px;
     width: 300px;
 }
-
+/* Padding below the heading in the game */
 .game h4{
     margin-bottom: 1rem;
 }
