--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,4 @@
-
-/*Body styles*/
-body{
-    min-height: 100vh; /*Ensure the body takes up the full height of the viewport */
-    background-color: #b1bfd8;  /* Light blue background color */
-    background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%); /* Gradient background for a smooth transition between two shades of blue */
+ground-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%); /* Gradient background for a smooth transition between two shades of blue */
 
     display: flex;
     justify-content: center;  /* Center content horizontally */
