--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,4 @@
-
-
-/* Scoreboard Container */
-.score-board {
- 1rem 0;/* Add margin for spacing */
-    padding: 0.5rem;
-    background-color: #ffffff; /*White background*/
-    border-radius: 8px;  /* Rounded corners */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Light shadow for a 3D effect */
+ow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Light shadow for a 3D effect */
 }
 
 /*Score section styles*/
