--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,4 @@
-ow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Light shadow for a 3D effect */
-}
-
-/*Score section styles*/
-.score {
-    font-size: 1.2rem; /*Increase font size*/
-    font-weight: bold; /* Make the score bold*/
-    color: #333; /*Dark color for text*/
+ #333; /*Dark color for text*/
 }
 
 .score h3 {
