--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,5 @@
 
-
-
-    text-align: center;
-    margin: 1rem 0;
-}
-
-/* Choices Area */
+/
 .choices{
     display: flex;
     justify-content: center;
