--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,5 @@
 
-/
-
-    width: 100px;
-    height: 100px;
-
-    padding: .7rem;
-    margin-right: 2rem;
-
-    border-radius: 50%;
+dius: 50%;
     border: .4rem solid black;
 
     cursor: pointer;
