--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,6 @@
 
 
-/* Image inside the Weapon Choice */
-.img img{
-    width: 100%;
-}
-
-/* Result Styling */
-.result{
-    font-size: 1.5rem;
-    font-family: monospace, sans-serif;
-    text-transform: uppercase;
+t-transform: uppercase;
     letter-spacing: 2px;
     width: 300px;
 }
