--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,7 @@
 
 
 t-trad (max-width: 700px){
-    .game-conatiner{
-        width: 90%;
-    }
-    .game img{
-        height: 100px;
-    }
-}
-
-/* For screens smaller than 550px */
+ smaller than 550px */
 @media screen and (max-width: 550px){
     .game-container{
         width: 95%;
